--- a/index.html
+++ b/index.html
@@ -520,8 +520,7 @@
                                                         </div>
 
                                                         <div class="date-of-time">
-                                                            <span>September 2023 –
-                                                                Current </span>
+                                                            <span>September 2023 – Current </span>
                                                         </div>
 
                                                     </div>
